# den

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  styles.css
.amareleo-tmp-ledger-1-0/: IDENTITY  LOG  OPTIONS-000007
src/: app.rs  sidebar2.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.aleo/leo/: leo_cache_last_update_check
src-tauri/.amareleo/: amareleo-chain-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Inter.eot  aleo.sublime-color-scheme  aleo.sublime-syntax  leo.sublime-color-scheme  leo.sublime-syntax
src-tauri/src/: clipboard.rs  compile.rs  compile_DEPRECATED.rs  dialog.rs  file.rs  highlight.rs  leo.rs  lib.rs  load_theme_syntax.rs  main.rs  open_explorer.rs  read_file.rs  snarkvm.rs  state.rs  test.rs  url.rs  warning.rs  watch_DEPRECATED.rs
src/app/: ide.rs  sidebar.rs
src/app/sidebar/: account.rs  compile.rs  deploy_execute.rs  environment.rs  file_explorer.rs  history.rs  mod.rs  records.rs  rest_api.rs
