[package]
name = "den-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
leptos-use = { version = "0.15.5", features = ["use_window_scroll"] }
serde_json = "1.0.138"


[workspace]
members = ["src-tauri"]

[dependencies.web-sys]
version = "0.3"
features=["css"]
