[package]
name = "Den"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "den_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.11"
leo-lang = "2.5.0"
leo-compiler = "2.5.0"
leo-ast = "2.5.0"
leo-errors = "2.5.0"
leo-package = "2.5.0"
leo-retriever = "2.5.0"
leo-span = "2.5.0"
indexmap = "2.6"
notify = { version = "8.0.0", features = ["serde"] }
futures = "0.3.31"
notify-debouncer-mini = "0.6.0"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.2.1"
rand = "0.8.0"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
rfd = {version = "0.15.2", default-features = false, features= ["gtk3", "common-controls-v6"] }
aleo-std = "0.1.24"

[dependencies.snarkvm]
version = "1.5.0"
features = [ "circuit", "console" ]


[dependencies.anyhow]
version = "1.0"
